# stark-backend

./: .codespellignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  P32_foo.py  README.md  bench.sh  bn254_bench.cu  bn254_compress.cu  bn254_core_sass.cu  bn254_u32_utils.cu  bn254_utils.cu  build.rs  compile_commands.json  crates.js  dump_sass.sh  extract_verifier.sh  gstephen.sh  help.html  index.html  nsys-run.json  profile.sh  protocol_changes.md  search-index.js  settings.html  src-files.js
benchmarks/proving/: Cargo.toml
benchmarks/proving/src/: main.rs
benchmarks/synthetic/: Cargo.toml  README.md  reth-block-23992138-profile.jsonl  segment_profile.rs  synthetic_air.rs  synthetic_runner.rs
benchmarks/synthetic/src/: lib.rs  segment_profile.rs  synthetic_air.rs
crates/backend-tests/: Cargo.toml
crates/backend-tests/src/: lib.rs
crates/compiler/: Cargo.toml  design.md  graph-ir.md  layout_optimization_problem.md
crates/compiler/benches/: ntt.rs
crates/compiler/examples/: dump_ntt_cuda.rs  ntt_scale_graph.rs
crates/compiler/macros/: Cargo.toml
crates/compiler/macros/src/: lib.rs
crates/compiler/src/: canonicalize.rs  codegen.rs  dump.rs  graph_exe.rs  graph_ir.rs  ir.rs  kernel_ir.rs  kernels.rs  lib.rs  lower.rs  passes.rs  planner.rs  quast.rs  runtime.rs
crates/compiler/src/passes/: canonicalize.rs  codegen.rs  insert_sync.rs  layout_infer.rs  lower_to_kir.rs  mod.rs  type_infer.rs  (+4 more)
crates/compiler/tests/: gpu.rs  gpu_macro.rs
crates/cpu-backend/: Cargo.toml
crates/cpu-backend/benches/: keccakf.rs
crates/cpu-backend/examples/: keccakf.rs
crates/cpu-backend/src/: backend.rs  device.rs  engine.rs  error.rs  lib.rs  merkle.rs  pcs_data.rs  row_major_ops.rs  stacked_reduction.rs  transcript.rs  two_adic.rs  whir.rs
crates/cpu-backend/tests/: fractional_sumcheck_gkr.rs  integration.rs  partitioned_sum_air.rs  proof_codec.rs  stacked_reduction.rs  transcript.rs
crates/cuda-backend/: Cargo.toml  build.rs
crates/cuda-backend-v2/: Cargo.toml  build.rs  time.out
crates/cuda-backend-v2/examples/: keccakf.rs
crates/cuda-backend-v2/src/: device.rs  engine.rs  error.rs  gpu_backend.rs  hybrid_chip.rs  lib.rs  merkle_tree.rs  monomial.rs  pkey.rs  poly.rs  prover_backend.rs  sponge.rs  stacked_pcs.rs  stacked_reduction.rs  sumcheck.rs  test_utils.rs  tests.rs  types.rs  utils.rs  whir.rs
crates/cuda-backend-v2/tests/: ntt_roundtrip.rs
crates/cuda-backend/examples/: fibonacci.rs  keccak256.rs  keccakf.rs  keccakf_parallel.rs  trace_committer.rs
crates/cuda-backend/src/: base.rs  bn254_sponge.rs  chip.rs  data_transporter.rs  device.rs  engine.rs  error.rs  fri_log_up.rs  gpu_backend.rs  gpu_device.rs  hash_scheme.rs  hybrid_chip.rs  lib.rs  merkle_tree.rs  monomial.rs  ntt.rs  pkey.rs  poly.rs  profiler_init.rs  prover_backend.rs  sponge.rs  stacked_pcs.rs  stacked_reduction.rs  sumcheck.rs  test_utils.rs  tests.rs  types.rs  whir.rs
crates/cuda-backend/tests/: ntt_roundtrip.rs
crates/cuda-builder/: Cargo.toml
crates/cuda-builder/src/: lib.rs
crates/cuda-common/: Cargo.toml  build.rs
crates/cuda-common/benches/: static_alloc.rs  trace_phases.rs  trace_replay.rs
crates/cuda-common/docs/: extension_fields.md
crates/cuda-common/include/: cta_probe.cuh  fp.h  fp2x3.h  fp3x2.h  fp5.h  fp6.h  fpext.h  kb.h  kb2x3.h  kb3x2.h  kb5.h  kb6.h  launcher.cuh  poseidon2.cuh
crates/cuda-common/src/: benchmark.rs  common.rs  copy.rs  d_buffer.rs  error.rs  lib.rs  memory_manager copy.rs  memory_manager.rs  pinned.rs  stream.rs
crates/cuda-profiler/: Cargo.toml  build.rs
crates/cuda-profiler/nvbit-tool/: .gitignore  Makefile  README.md  aggregate.c  inject_funcs.cu  render_overview.py  tool.cu
crates/cuda-profiler/src/: ffi.rs  kernel_id.rs  lib.rs  log_writer.rs  record.rs  ring.rs
crates/cuda-profiler/tests/: smoke.rs
crates/metal-backend/: Cargo.toml  build.rs
crates/metal-backend/examples/: keccakf.rs
crates/metal-backend/src/: base.rs  convert.rs  data_transporter.rs  device.rs  engine.rs  error.rs  lib.rs  logup_zerocheck.rs  merkle_tree.rs  metal_backend.rs  ntt.rs  openings.rs  pkey.rs  poly.rs  sponge.rs  stacked_pcs.rs  stacked_reduction.rs  sumcheck.rs  tests.rs  utils.rs  whir.rs
crates/metal-backend/tests/: ntt_roundtrip.rs
crates/metal-common/: Cargo.toml
crates/metal-common/src/: command.rs  copy.rs  d_buffer.rs  device.rs  error.rs  lib.rs
crates/stark-backend/: Cargo.toml  README.md  internal_params.json  root_params.json
crates/stark-backend-v2/: Cargo.toml  README.md  profile.sh
crates/stark-backend-v2/derive/: Cargo.toml
crates/stark-backend-v2/examples/: keccakf.rs
crates/stark-backend-v2/src/: baby_bear_poseidon2.rs  chip.rs  codec.rs  codec_vk.rs  config.rs  debug.rs  duplex_sponge.rs  engine.rs  hasher.rs  lib.rs  merkle.rs  poly_common.rs  proof.rs  proof_size.rs  soundness.rs  test_utils.rs  tests.rs  transcript.rs  v1_shims.rs
crates/stark-backend-v2/tests/: fractional_sumcheck_gkr.rs  integration.rs  partitioned_sum_air.rs  proof_codec.rs  stacked_reduction.rs  transcript.rs  whir.rs
crates/stark-backend/codec-derive/: Cargo.toml
crates/stark-backend/data/: cached_trace_instrumented_verifier.csv
crates/stark-backend/src/: any_air.rs  chip.rs  codec.rs  commit.rs  config.rs  duplex_sponge.rs  engine.rs  hasher.rs  lib.rs  memory_metering.rs  multi_field_packing.rs  poly_common.rs  proof.rs  rap.rs  soundness.rs  sumcheck.rs  transcript.rs  utils.rs
crates/stark-backend/tests/: fractional_sumcheck_gkr.rs  integration.rs  integration_test.rs  keygen_validation.rs  partitioned_sum_air.rs  proof_codec.rs  soundness.rs  stacked_reduction.rs  transcript.rs  whir.rs
crates/stark-sdk/: Cargo.toml  bench.sh  profile.sh
crates/stark-sdk/examples/: compute_quotient_dag.rs  interactions.rs  keccakf.rs  profile.sh  prove_keccak_baby_bear_poseidon2.rs  prove_keccak_fast_baby_bear_poseidon2.rs
crates/stark-sdk/src/: baby_bear_poseidon2.rs  cost_estimate.rs  engine.rs  lib.rs  metrics_tracing.rs  nvtx_tracing.rs  utils.rs  verify_fri_bb_pos2.rs  verify_mono.rs
(+1161 files in other folders)
