[workspace.package]
version = "2.0.0-alpha"
edition = "2021"
rust-version = "1.83"
authors = ["OpenVM contributors"]
homepage = "https://openvm.dev"
repository = "https://github.com/openvm-org/"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/stark-backend",
    "crates/stark-sdk",
    "crates/cuda-common",
    "crates/cuda-backend",
    "crates/cuda-builder",
    "crates/stark-backend-v2",
    "crates/stark-backend-v2/derive",
    "benchmarks/fields"
]
# Only these build by default
default-members = [
    "crates/stark-backend",
    "crates/stark-sdk",
    "crates/stark-backend-v2",
    "crates/stark-backend-v2/derive",
]
resolver = "2"

# Fastest runtime configuration
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

# Make sure debug symbols are in the bench profile for flamegraphs
[profile.bench]
inherits = "profiling"

# This will compile slowly
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

# For O1 optimization but still fast(ish) compile times
[profile.fast]
inherits = "dev"
debug-assertions = true
# better recompile times
incremental = true
lto = "thin"

[workspace.dependencies]
# OpenVM
openvm-stark-backend = { path = "crates/stark-backend", default-features = false }
openvm-stark-sdk = { path = "crates/stark-sdk", default-features = false }
openvm-cuda-builder = { path = "crates/cuda-builder", default-features = false }
openvm-cuda-common = { path = "crates/cuda-common", default-features = false }
openvm-cuda-backend = { path = "crates/cuda-backend", default-features = false }
stark-backend-v2 = { path = "crates/stark-backend-v2", default-features = false }
codec-derive = { path = "crates/stark-backend-v2/derive", default-features = false }

# Plonky3 - we pin the exact version since this dependency is security critical
p3-air = { version = "=0.4.1", default-features = false }
p3-field = { version = "=0.4.1", default-features = false }
p3-commit = { version = "=0.4.1", default-features = false }
p3-matrix = { version = "=0.4.1", default-features = false }
p3-baby-bear = { version = "=0.4.1", default-features = false }
p3-koala-bear = { version = "=0.4.1", default-features = false }
p3-util = { version = "=0.4.1", default-features = false }
p3-challenger = { version = "=0.4.1", default-features = false }
p3-dft = { version = "=0.4.1", default-features = false }
p3-fri = { version = "=0.4.1", default-features = false }
p3-goldilocks = { version = "=0.4.1", default-features = false }
p3-keccak = { version = "=0.4.1", default-features = false }
p3-keccak-air = { version = "=0.4.1", default-features = false }
p3-blake3 = { version = "=0.4.1", default-features = false }
p3-mds = { version = "=0.4.1", default-features = false }
p3-merkle-tree = { version = "=0.4.1", default-features = false }
p3-monty-31 = { version = "=0.4.1", default-features = false }
p3-poseidon = { version = "=0.4.1", default-features = false }
p3-poseidon2 = { version = "=0.4.1", default-features = false }
p3-symmetric = { version = "=0.4.1", default-features = false }
p3-uni-stark = { version = "=0.4.1", default-features = false }
p3-maybe-rayon = { version = "=0.4.1", default-features = false } # the "parallel" feature is NOT on by default to allow single-threaded benchmarking

# Bn254 support
p3-bn254 = { version = "=0.4.1", default-features = false }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "bb476b9" }
ff = { version = "0.13.0", default-features = false }

rayon = "1.10"
parking_lot = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tracing-forest = "0.1.6"
serde_json = "1.0.117"
lazy_static = "1.5.0"
once_cell = "1.19.0"
derive-new = "0.7.0"
derive_more = "1.0.0"
derivative = "2.2.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
enum-utils = "0.1.1"
backtrace = "0.3.71"
metrics = "0.23.0"
cfg-if = "1.0.0"
dashmap = "6.1"
inferno = "0.11.21"
test-case = "3.3.1"
test-log = "0.2.16"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
tempfile = "3.13.0"
thiserror = "1.0.65"
rustc-hash = "2.0.0"
static_assertions = "1.1.0"
async-trait = "0.1.83"
getset = "0.1.3"
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
hex = { version = "0.4.3", default-features = false }
hex-literal = "1.0.0"
bitcode = "0.6.5"
bincode = "2.0.1"
bincode_derive = "2.0.1"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3.2"
bytesize = "2.0"
cc = { version = "1.0", default-features = false }
ctor = "0.5"
tokio = { version = "1", default-features = false }
toml = "0.8.14"
metrics-tracing-context = "0.16.0"
metrics-util = "0.17.0"
metrics-exporter-prometheus = "0.15.3"
rustls = { version = "0.23", default-features = false }

# default-features = false for no_std
itertools = { version = "0.14.0", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
