[package]
name = "cuda-backend-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenVM CUDA prover backend V2"

[dependencies]
stark-backend-v2.workspace = true

openvm-stark-backend.workspace = true
openvm-cuda-common.workspace = true
openvm-cuda-backend.workspace = true

itertools.workspace = true
derive-new.workspace = true
tracing.workspace = true
thiserror.workspace = true
getset.workspace = true

# Plonky3
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-util = { workspace = true }

[build-dependencies]
openvm-cuda-builder.workspace = true

[dev-dependencies]
stark-backend-v2 = { workspace = true, features = ["test-utils"] }
openvm-stark-sdk.workspace = true
p3-keccak-air.workspace = true
rand.workspace = true
eyre.workspace = true
test-case.workspace = true

[features]
default = ["stark-backend-v2/parallel"] # TODO: remove this once no longer using cpu rayon
touchemall = ["openvm-cuda-common/touchemall"]
