[package]
name = "cuda-backend-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenVM CUDA prover backend V2"

[dependencies]
openvm-stark-backend.workspace = true
openvm-cuda-common.workspace = true

itertools.workspace = true
derive-new.workspace = true
tracing.workspace = true
thiserror.workspace = true
getset.workspace = true
rustc-hash.workspace = true
rand.workspace = true

# Plonky3
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }

[build-dependencies]
openvm-cuda-builder.workspace = true

[dev-dependencies]
openvm-stark-backend = { workspace = true, features = ["test-utils"] }
openvm-stark-sdk.workspace = true
p3-keccak-air.workspace = true
eyre.workspace = true
test-case.workspace = true

[features]
default = ["openvm-stark-backend/parallel"] # TODO: remove this once no longer using cpu rayon
touchemall = ["openvm-cuda-common/touchemall"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
