[package]
name = "openvm-cuda-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenVM CUDA prover backend for the SWIRL proof system"

[dependencies]
openvm-stark-backend.workspace = true
openvm-stark-sdk = { workspace = true, features = ["nvtx"] }
openvm-cuda-common.workspace = true
openvm-cuda-profiler = { workspace = true, optional = true }

itertools.workspace = true
derive-new.workspace = true
tracing.workspace = true
thiserror.workspace = true
getset.workspace = true
rustc-hash.workspace = true
rand.workspace = true
serde.workspace = true

# Plonky3
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254 = { workspace = true, optional = true }
p3-dft = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }

# BN254 round constants
zkhash = { workspace = true, optional = true }

[build-dependencies]
openvm-cuda-builder.workspace = true
glob.workspace = true

[dev-dependencies]
openvm-stark-backend = { workspace = true, features = ["test-utils"] }
openvm-backend-tests.workspace = true
p3-keccak-air.workspace = true
eyre.workspace = true
test-case.workspace = true

[features]
default = []
baby-bear-bn254-poseidon2 = [
    "openvm-stark-sdk/baby-bear-bn254-poseidon2",
    "dep:p3-bn254",
    "dep:zkhash",
]
touchemall = ["openvm-cuda-common/touchemall"]
test-utils = ["openvm-stark-backend/test-utils"]
# Hardware-mapped CUDA profiler (per-CTA + CUPTI sidecar). Off by default; with
# this feature off the new crate is not compiled or linked, no SHADOW_*
# preprocessor macros are defined, and instrumented kernels expand to their
# unprofiled SASS.
profiler = ["dep:openvm-cuda-profiler"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
