[package]
name = "openvm-cuda-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "A build utility for CUDA projects"

[dependencies]
cc = { workspace = true, features = ["parallel"] }
glob.workspace = true
