[package]
name = "openvm-cuda-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CUDA common utils"
links = "cuda-common"

[dependencies]
tracing.workspace = true
metrics.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
bytesize.workspace = true
ctor.workspace = true

[build-dependencies]
openvm-cuda-builder.workspace = true

[features]
touchemall = []