[package]
name = "openvm-cuda-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "CUDA common utils"
links = "cuda-common"

[dependencies]
tracing.workspace = true
metrics.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
bytesize.workspace = true
ctor.workspace = true

[build-dependencies]
openvm-cuda-builder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
touchemall = []
# Tracks the allocating stream per DeviceBuffer and debug-asserts that
# operations (fill_zero, etc.) use the same stream. Useful for catching
# accidental cross-stream misuse during development.
debug-cuda-stream = []

[[bench]]
name = "static_alloc"
harness = false

[[bench]]
name = "trace_replay"
harness = false

[[bench]]
name = "trace_phases"
harness = false
