[package]
name = "openvm-metal-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Metal GPU common utils for OpenVM"

[dependencies]
metal = "0.29"
objc = "0.2"
tracing.workspace = true
metrics.workspace = true
thiserror.workspace = true
bytesize.workspace = true

[dev-dependencies]
rand.workspace = true
