[package]
name = "stark-backend-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Multi-matrix STARK backend for the SWIRL proof system"

[dependencies]
codec-derive.workspace = true

p3-air.workspace = true
p3-challenger.workspace = true
p3-poseidon2.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-interpolation.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

itertools.workspace = true
rayon.workspace = true
hex-literal.workspace = true
serde = { workspace = true, features = [
    "derive",
    "alloc",
    "rc",
] }
derive-new.workspace = true
tracing.workspace = true
getset.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
eyre.workspace = true
derivative.workspace = true
bitcode = { workspace = true, features = ["serde"] }
rustc-hash.workspace = true
serde_json.workspace = true
metrics = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

mimalloc = { version = "0.1.43", optional = true }

[dev-dependencies]
rand.workspace = true
p3-baby-bear.workspace = true
p3-keccak-air.workspace = true
test-case.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-forest = { workspace = true }

[features]
default = ["parallel", "metrics"]
parallel = ["p3-maybe-rayon/parallel"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
metrics = ["dep:metrics"]
test-utils = []
