[package]
name = "openvm-stark-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Multi-matrix STARK backend for the SWIRL proof system"

[dependencies]
openvm-codec-derive.workspace = true

p3-air.workspace = true
p3-challenger.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-interpolation.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

itertools.workspace = true
rayon.workspace = true
hex-literal.workspace = true
serde = { workspace = true, features = [
    "derive",
    "alloc",
    "rc",
] }
derive-new.workspace = true
tracing.workspace = true
getset.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
eyre.workspace = true
derivative.workspace = true
postcard = { workspace = true, features = ["alloc"] }
num-bigint = { workspace = true, optional = true }
rustc-hash.workspace = true
serde_json.workspace = true
metrics = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

mimalloc = { version = "0.1.43", optional = true }

[dev-dependencies]
openvm-stark-backend = { workspace = true, features = ["test-utils"] }
openvm-stark-sdk.workspace = true # dev-dependency is not circular
openvm-backend-tests.workspace = true
p3-baby-bear.workspace = true
p3-bn254.workspace = true
rand.workspace = true
test-case.workspace = true

[features]
default = ["parallel", "metrics"]
parallel = ["p3-maybe-rayon/parallel"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
metrics = ["dep:metrics"]
multi-field-transcript = ["dep:num-bigint"]
test-utils = []
lean = ["openvm-codec-derive/lean"] # feature for Lean constraint codegen
soundness-bchks25-optimized = [] # use brute force optimized parameters for [BCHKS25] proximity gaps security
